RealtimeMediaSource does not need to be a WeakPtr https://bugs.webkit.org/show_bug.cgi?id=223573 <rdar://75583258>

Reviewed by Eric Carlson.

Source/WebCore:

Remove use of WeakPtr and ref the source instead.
Covered by existing tests.

* platform/mediastream/RealtimeIncomingAudioSource.cpp:
(WebCore::RealtimeIncomingAudioSource::OnChanged):
* platform/mediastream/RealtimeIncomingVideoSource.cpp:
(WebCore::RealtimeIncomingVideoSource::OnChanged):
* platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::updateHasStartedProducingData):
* platform/mediastream/RealtimeMediaSource.h:

Source/WebKit:

* UIProcess/SpeechRecognitionRemoteRealtimeMediaSource.h:


Canonical link: https://commits.webkit.org/235593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274789 268f45cc-cd09-0410-ab3c-d52691b4dbfc